--- a/index.html
+++ b/index.html
@@ -110,13 +110,16 @@ html, body {
 .indexItem { width:80%; background:rgba(30,0,50,0.7); border:2px solid #d166ff; border-radius:15px; margin:10px; padding:15px; display:flex; align-items:center; justify-content:space-between; box-shadow:0 0 15px #a044ff inset; }
 .indexBubble { width:60px; height:60px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-weight:bold; color:white; border:2px solid #d166ff; }
 .indexText { flex:1; margin-left:20px; font-size:20px; }
+
+/* --- Easter Egg --- */
+#easterEgg { position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:4000; display:none; text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards; }
+@keyframes fadeShake { 0%{opacity:0; transform:translateX(0);} 10%{opacity:1; transform:translateX(-5px);} 20%{transform:translateX(5px);} 30%{transform:translateX(-5px);} 40%{transform:translateX(5px);} 50%{transform:translateX(-5px);} 60%{transform:translateX(5px);} 70%{transform:translateX(-5px);} 80%{transform:translateX(5px);} 90%{transform:translateX(-5px);} 100%{opacity:0; transform:translateX(0);} }
 </style>
 </head>
 <body>
 
 <!-- Loading -->
 <div id="loadingScreen">Level 12 Studio</div>
-
 <div id="versionLabel">Released 1.4</div>
 
 <!-- Main Menu -->
@@ -163,7 +166,15 @@ html, body {
   <div class="indexItem"><div class="indexBubble">12</div><div class="indexText">Normal — +1 point | Common</div></div>
   <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#ffff00,#a044ff);color:#000;">12×2</div><div class="indexText">2x — doubles score | Rare</div></div>
   <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#0f0,#0a0);color:#000;">12²</div><div class="indexText">+144 — adds 144 points | Very Rare</div></div>
+  <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="indexText">Triple — spawns 3 bubbles | Rare</div></div>
+  <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#fff,#d166ff);color:#000;">&lt;12&gt;</div><div class="indexText">Gravity — moves bubbles to this | Rare</div></div>
+  <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#fff,#000);color:#0ff;">!12!</div><div class="indexText">Invert — screen inverts +10 points | Rare</div></div>
+  <div class="indexItem"><div class="indexBubble" style="background:linear-gradient(135deg,#ff0000,#ffff00);color:#000;">?12?</div><div class="indexText">Instawin — +999999999 | Legendary</div></div>
 </div>
+
+<div id="easterEgg"></div>
+
+<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
 const loading=document.getElementById('loadingScreen');
@@ -185,17 +196,22 @@ const finalScoreText=document.getElementById('finalScoreText');
 const continueBtn=document.getElementById('continueBtn');
 const indexMenu=document.getElementById('indexMenu');
 const indexClose=document.querySelector('#indexMenu .closeBtn');
+const easterEl=document.getElementById('easterEgg');
+const popSound=document.getElementById('popSound');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false;
-let spawnSpeed=1500, speedFactor=1;
+let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, spawnSpeed=1200, speedFactor=1;
 
+// --- Loading ---
 window.onload=()=>{setTimeout(()=>{loading.style.display='none';startBtn.style.display='block';indexBtn.style.display='block';},2000);}
+
+// --- Menu Buttons ---
 startBtn.onclick=()=>{startBtn.style.display='none';indexBtn.style.display='none'; diffMenu.style.display='flex';};
 diffBackBtn.onclick=()=>{diffMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
 document.querySelectorAll('.diffBtn').forEach(btn=>btn.onclick=()=>{setDifficulty(btn.dataset.diff);});
 indexBtn.onclick=()=>{indexMenu.style.display='flex'; startBtn.style.display='none'; indexBtn.style.display='none';};
 indexClose.onclick=()=>{indexMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
 
+// --- Difficulty Selection ---
 function setDifficulty(d){
   if(d==='easy'){spawnSpeed=1600; speedFactor=0.8;}
   else if(d==='normal'){spawnSpeed=1200; speedFactor=1;}
@@ -203,6 +219,7 @@ function setDifficulty(d){
   diffMenu.style.display='none'; startCountdown();
 }
 
+// --- Countdown ---
 function startCountdown(){
   let c=3; countdownEl.style.display='block'; countdownEl.textContent=c;
   const inter=setInterval(()=>{
@@ -211,17 +228,100 @@ function startCountdown(){
   },1000);
 }
 
+// --- Game ---
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false;
   scoreContainer.style.display='block'; pauseBtn.style.display='flex';
   scoreEl.style.display='block'; livesEl.style.display='block';
   scoreEl.textContent="Score: "+score; livesEl.textContent="Lives: "+lives;
-  // spawnBubble(); updateBubbles();  // Insert your original bubble spawn/update logic here
+  spawnBubble();
+  requestAnimationFrame(updateBubbles);
 }
 
+// --- Spawn Bubble ---
+function spawnBubble(){
+  if(!gameRunning || gamePaused) return;
+  const bubble=document.createElement('div');
+  bubble.classList.add('bubble');
+  const chance=Math.random();
+  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else { bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
+  document.body.appendChild(bubble);
+
+  bubble.onclick=bubble.ontouchstart=()=>{
+    if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) { popSound.currentTime=0; popSound.play(); }
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{b.style.left=(bx-parseFloat(b.style.width)/2)+'px'; b.style.top=(by-parseFloat(b.style.height)/2)+'px';});
+    }
+    else if(bubble.dataset.type==="invert"){ document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000); }
+    else if(bubble.dataset.type==="instawin") score+=999999999;
+    else score++;
+    if(score>999999999) score=999999999;
+    scoreEl.textContent="Score: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="High Score: "+highscore; }
+  };
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,spawnSpeed);
+}
+
+// --- Single Bubble ---
+function spawnSingleBubble(){
+  if(!gameRunning) return;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
+  document.body.appendChild(bubble);
+  bubble.onclick=bubble.ontouchstart=()=>{ if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Score: "+score; if(score>highscore){ highscore=score; highscoreEl.textContent="High Score: "+highscore; } bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);};
+  bubbles.push(bubble);
+}
+
+// --- Update ---
+function updateBubbles(){
+  if(!gameRunning || gamePaused) { requestAnimationFrame(updateBubbles); return; }
+  bubbles.forEach(bubble=>{
+    const top=parseFloat(bubble.style.top);
+    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame(); }
+  });
+  requestAnimationFrame(updateBubbles);
+}
+
+// --- End Game ---
+function endGame(){
+  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreEl.style.display='none'; livesEl.style.display='none'; pauseBtn.style.display='none';
+  if(score===12 || score<=3){
+    easterEl.textContent = (score===12?'12':'BRUH');
+    easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards';
+    setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
+  } else showEndScreen();
+}
+function showEndScreen(){ finalScoreText.textContent="Your Score: "+score; endScreen.style.display='flex'; }
+continueBtn.onclick=()=>{ endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; };
+
+// --- Pause ---
 function togglePause(){ if(!gameRunning) return; gamePaused=!gamePaused; pauseScreen.style.display=gamePaused?'flex':'none'; }
-pauseBtn.onclick=togglePause; continueGameBtn.onclick=togglePause;
-endGameBtn.onclick=()=>{ pauseScreen.style.display='none'; endGame(); };
+pauseBtn.onclick=togglePause; continueGameBtn.onclick=togglePause; endGameBtn.onclick=()=>{ pauseScreen.style.display='none'; endGame(); };
 window.addEventListener('blur',()=>{if(gameRunning && !gamePaused) togglePause();});
 </script>
 </body>
