--- a/index.html
+++ b/index.html
@@ -5,33 +5,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>12 Bubbles</title>
 <style>
-html, body { margin:0; padding:0; height:100%; font-family: monospace; background:#0a0a0a; color:#fff; overflow:hidden; }
-
-/* --- LOADING --- */
+html, body { margin:0; padding:0; height:100%; font-family: monospace; background:#0a0a0a; color:#fff; overflow:hidden; display:flex; justify-content:center; align-items:center; }
+/* Loading */
 #loadingScreen { position:fixed;top:0;left:0;width:100%;height:100%; background:#000; display:flex; justify-content:center; align-items:center; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards; }
 @keyframes eyeGlow {0% {opacity:0.2;}50%{opacity:1;text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff;}100%{opacity:0.2;}}
 
-/* --- BUTTONS --- */
-button { font-family: monospace; font-weight:bold; border:none; border-radius:12px; cursor:pointer; color:#fff; text-transform:uppercase; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-#startBtn, #indexBtn { font-size:32px; padding:15px 35px; margin:10px auto; display:none; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); }
-#difficultyMenu { display:none; flex-direction:column; gap:15px; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); z-index:1001; }
-#difficultyMenu button { font-size:28px; padding:12px 25px; }
+/* Buttons */
+button { font-family: monospace; font-weight:bold; border:none; border-radius:12px; cursor:pointer; color:#fff; text-transform:uppercase; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); }
+#startBtn, #indexBtn, #difficultyMenu button, #backBtn, #continueBtn, #continueGameBtn, #endGameBtn { font-size:32px; padding:15px 35px; margin:10px auto; display:block; }
+#difficultyMenu { display:none; flex-direction:column; gap:15px; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); z-index:1001; text-align:center; }
 
-/* --- INDEX PANEL --- */
-#indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
-#indexPanel h2 { text-transform:uppercase; font-size:28px; margin-bottom:10px; }
-#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; font-weight:bold; color:#fff; z-index:1001; }
-.indexItem { display:flex; align-items:center; margin:10px 0; font-size:20px; }
+/* Index */
+#indexPanel { position:fixed; top:100%; left:50%; transform:translateX(-50%); width:90%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; border-radius:15px; }
+#indexPanel h2 { text-transform:uppercase; font-size:28px; margin-bottom:10px; text-align:center; }
+#indexPanel .closeBtn { position:absolute; top:10px; right:10px; font-size:28px; cursor:pointer; font-weight:bold; color:#fff; z-index:1001; }
+.indexItem { display:flex; align-items:center; margin:10px 0; font-size:20px; justify-content:flex-start; }
 .indexItem .bubbleImg { width:60px; height:60px; margin-right:15px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; }
 
-/* --- GAME UI --- */
+/* Game UI */
 #countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:100px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; display:none; z-index:1001; }
 #scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); text-align:center; display:none; z-index:1001; }
-#highscore { font-size:28px; color:#ff0; margin-bottom:5px; }
+#highscore { font-size:28px; color:#ff0; margin-bottom:5px; text-align:center; }
 #score { font-size:36px; color:#d166ff; }
 #lives { font-size:28px; color:#f00; margin-top:5px; }
 
-/* --- BUBBLES --- */
+/* Bubbles */
 .bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:28px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:30px; }
 .bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:30px; }
@@ -40,16 +38,16 @@ button { font-family: monospace; font-weight:bold; border:none; border-radius:12
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:28px; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
 
-/* --- END SCREEN --- */
+/* End Screen */
 #endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:48px; z-index:1500; text-align:center; }
 #continueBtn { margin-top:30px; font-size:28px; padding:15px 40px; }
 
-/* --- PAUSE --- */
+/* Pause */
 #pauseBtn { position:fixed; top:10px; right:10px; font-size:50px; color:#fff; cursor:pointer; z-index:1002; display:none; }
-#pauseScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:2000; }
+#pauseScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:2000; text-align:center; }
 #pauseScreen button { margin:10px; font-size:28px; padding:15px 40px; }
 
-/* --- EASTER EGG --- */
+/* Easter Egg */
 #easterEgg { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; text-transform:uppercase; display:none; opacity:0; animation:fadeShake 5s forwards; }
 @keyframes fadeShake {0%{opacity:0;}10%{opacity:1;transform:translateX(-5px);}20%{transform:translateX(5px);}30%{transform:translateX(-5px);}40%{transform:translateX(5px);}50%{transform:translateX(-5px);}60%{transform:translateX(5px);}70%{transform:translateX(-5px);}80%{transform:translateX(5px);}90%{transform:translateX(-5px);}100%{opacity:0;transform:translateX(0);}}
 </style>
@@ -102,6 +100,7 @@ button { font-family: monospace; font-weight:bold; border:none; border-radius:12
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
+// Variables
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -125,115 +124,99 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, spawnSpeed=500, speedFactor=1, startTime;
 
-// --- LOADING ---
-window.addEventListener('load',()=>{setTimeout(()=>{loadingScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';},2000);});
-
-// --- BUTTONS ---
-startBtn.onclick=()=>{startBtn.style.display='none'; indexBtn.style.display='none'; difficultyMenu.style.display='flex';};
-backBtn.onclick=()=>{difficultyMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-indexBtn.onclick=()=>{indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none';};
-closeBtn.onclick=()=>{indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block';};
-continueBtn.onclick=()=>{endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-
-// --- DIFFICULTY ---
-difficultyMenu.querySelectorAll('button[data-diff]').forEach(btn=>{
-  btn.onclick=()=>{
-    const diff=btn.dataset.diff;
-    if(diff==='easy'){spawnSpeed=800; speedFactor=0.8;}
-    else if(diff==='normal'){spawnSpeed=500; speedFactor=1;}
-    else if(diff==='hard'){spawnSpeed=300; speedFactor=1.5;}
-    difficultyMenu.style.display='none';
-    startCountdown();
-  };
+// Loading
+window.addEventListener('load',()=>{
+    setTimeout(()=>{
+        loadingScreen.style.display='none';
+        startBtn.style.display='block';
+        indexBtn.style.display='block';
+    },2000);
 });
 
-// --- PAUSE ---
+// Start & index
+startBtn.onclick=()=>{startBtn.style.display='none'; indexBtn.style.display='none'; difficultyMenu.style.display='flex';};
+backBtn.onclick=()=>{difficultyMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
+indexBtn.onclick=()=>{indexPanel.style.top='30%';};
+closeBtn.onclick=()=>{indexPanel.style.top='100%';};
+document.body.addEventListener('click', e=>{if(indexPanel.style.top==='30%' && e.target!==indexPanel && e.target!==indexBtn){indexPanel.style.top='100%';}});
+
+// Difficulty
+difficultyMenu.querySelectorAll('button[data-diff]').forEach(btn=>{
+    btn.onclick=()=>{
+        const diff=btn.dataset.diff;
+        if(diff==='easy'){spawnSpeed=800; speedFactor=0.8;}
+        else if(diff==='normal'){spawnSpeed=500; speedFactor=1;}
+        else if(diff==='hard'){spawnSpeed=300; speedFactor=1.5;}
+        difficultyMenu.style.display='none';
+        startCountdown();
+    };
+});
+
+// Pause
 pauseBtn.onclick=()=>{gamePaused=true; pauseScreen.style.display='flex';};
 continueGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);};
 endGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; endGame();};
 window.addEventListener('blur',()=>{if(gameRunning){gamePaused=true; pauseScreen.style.display='flex';}});
 window.addEventListener('focus',()=>{if(gameRunning && gamePaused){gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);}});
 
-// --- COUNTDOWN & GAME LOGIC ---
+// Countdown & start
 function startCountdown(){
-  countdownEl.style.display='block';
-  let count=3; countdownEl.textContent=count;
-  const interval=setInterval(()=>{count--; if(count>0) countdownEl.textContent=count; else{clearInterval(interval); countdownEl.style.display='none'; scoreContainer.style.display='block'; pauseBtn.style.display='block'; startGame();}},1000);
+    countdownEl.style.display='block';
+    let count=3; countdownEl.textContent=count;
+    const interval=setInterval(()=>{
+        count--;
+        if(count>0) countdownEl.textContent=count;
+        else{
+            clearInterval(interval);
+            countdownEl.style.display='none';
+            scoreContainer.style.display='block';
+            pauseBtn.style.display='block';
+            startGame();
+        }
+    },1000);
 }
 
+// Game logic
 function startGame(){
-  score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
-  scoreEl.textContent="Score: "+score; livesEl.textContent="Lives: "+lives;
-  spawnBubble(); requestAnimationFrame(updateBubbles);
+    score=0;lives=3;bubbles=[];gameRunning=true;startTime=Date.now();
+    scoreEl.textContent="Score: "+score;livesEl.textContent="Lives: "+lives;
+    spawnBubble();
+    requestAnimationFrame(updateBubbles);
 }
 
-// --- SPAWN & UPDATE ---
+// Bubble spawn & update
 function spawnBubble(){
-  if(!gameRunning || gamePaused) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120*speedFactor;
-  const chance=Math.random();
-  const bubble=document.createElement('div'); bubble.classList.add('bubble');
-  if(chance<=0.001){bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin";}
-  else if(chance<=0.016){bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert";}
-  else if(chance<=0.0185){bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x";}
-  else if(chance<=0.0285){bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144";}
-  else if(chance<=0.0485){bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple";}
-  else if(chance<=0.0785){bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity";}
-  else{bubble.textContent="12"; bubble.dataset.type="normal";}
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px'; bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-  bubble.onclick=bubble.ontouchstart=()=>{
-    if(!gameRunning) return;
-    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
-    else if(bubble.dataset.type==="gravity"){const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;bubbles.forEach(b=>{b.style.left=(bx-parseFloat(b.style.width)/2)+'px';b.style.top=(by-parseFloat(b.style.height)/2)+'px';});}
-    else if(bubble.dataset.type==="invert"){document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000);}
-    else if(bubble.dataset.type==="instawin"){score+=999999999;}else score++;
-    if(score>999999999) score=999999999; scoreEl.textContent="Score: "+score;
-    if(score>highscore){highscore=score; highscoreEl.textContent="High Score: "+highscore;}
-  };
-  bubbles.push(bubble);
-  setTimeout(spawnBubble, spawnSpeed);
-}
-
-function spawnSingleBubble(){
-  if(!gameRunning) return;
-  const size=Math.random()*60+60;
-  const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent="12"; bubble.dataset.type="normal";
-  bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
-  document.body.appendChild(bubble);
-  bubble.onclick=bubble.ontouchstart=()=>{if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Score: "+score; if(score>highscore){highscore=score; highscoreEl.textContent="High Score: "+highscore;} bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);}
-  bubbles.push(bubble);
+    if(!gameRunning || gamePaused) return;
+    const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent='12'; bubble.dataset.type='normal';
+    const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
+    bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
+    bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
+    document.body.appendChild(bubble);
+    bubble.addEventListener('click',()=>{if(!gameRunning) return; score++; scoreEl.textContent="Score: "+score; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(score>highscore){highscore=score;highscoreEl.textContent="High Score: "+highscore;}});
+    bubbles.push(bubble);
+    setTimeout(spawnBubble, spawnSpeed);
 }
 
 function updateBubbles(){
-  if(!gameRunning || gamePaused) return;
-  bubbles.forEach(b=>{
-    const top=parseFloat(b.style.top);
-    b.style.top=top-parseFloat(b.dataset.speed)+'px';
-    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; b.remove(); bubbles=bubbles.filter(bb=>bb!==b); if(lives<=0) endGame();}
-  });
-  requestAnimationFrame(updateBubbles);
+    if(!gameRunning || gamePaused) return;
+    bubbles.forEach(bubble=>{
+        const top=parseFloat(bubble.style.top);
+        bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+        if(top<=0){lives--;livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame();}
+    });
+    requestAnimationFrame(updateBubbles);
 }
 
 function endGame(){
-  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none'; pauseBtn.style.display='none';
-  if(score===12 || score<=3){ easterEl.textContent=(score===12?'12':'BRUH'); easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards'; setTimeout(()=>{easterEl.style.display='none'; showEndScreen();},5000);}
-  else showEndScreen();
+    gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+    scoreContainer.style.display='none'; pauseBtn.style.display='none';
+    if(score===12){easterEl.textContent='12'; easterEl.style.display='flex'; setTimeout(()=>{easterEl.style.display='none'; showEndScreen();},3000);}
+    else showEndScreen();
 }
 
 function showEndScreen(){document.getElementById('finalScoreText').textContent="Your Score: "+score; endScreen.style.display='flex';}
+continueBtn.onclick=()=>{endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
+
 </script>
 </body>
 </html>
