--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ html, body {
   color:#fff; font-size:50px; font-weight:bold; z-index:3000;
   text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
-  font-family: monospace; /* fixed font */
+  font-family: monospace;
 }
 @keyframes eyeGlow {
   0% { opacity:0.2; text-shadow:none; }
@@ -30,8 +30,9 @@ html, body {
 /* --- HOME SCREEN --- */
 #homeScreen, #difficultyScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
-  display: flex; flex-direction: column; justify-content: center; align-items: center;
+  display: none; flex-direction: column; justify-content: center; align-items: center;
   background:#0a0a0a; z-index:1000;
+  font-family: monospace; /* ensure correct font */
 }
 .homeTitle { font-size:50px; font-weight:bold; margin-bottom:40px; }
 .btn {
@@ -47,23 +48,13 @@ html, body {
   max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px;
   z-index:999; box-shadow:0 -5px 30px #d166ff;
+  font-family: monospace;
 }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn {
   position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer;
   color:#fff; font-weight:bold; z-index:1001;
 }
-.indexItem { display:flex; align-items:center; margin:10px 0; }
-.indexItem .bubbleImg {
-  width:60px; height:60px; margin-right:15px; border-radius:50%;
-  display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #d166ff;
-  box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
-}
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
 /* --- GAME UI --- */
 #countdown {
@@ -77,6 +68,7 @@ html, body {
   position:fixed; top:20px; left:50%;
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
+  font-family: monospace;
 }
 #highscore { font-size:24px; color:#ff0; margin-bottom:5px; }
 #score { font-size:32px; color:#d166ff; }
@@ -90,12 +82,6 @@ html, body {
   border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
-.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0,0 0 60px #f00; }
 
 /* --- Pause Screen --- */
 #pauseScreen {
@@ -103,6 +89,7 @@ html, body {
   background:rgba(0,0,0,0.85); display:none; flex-direction:column;
   justify-content:center; align-items:center; color:#fff; font-size:32px;
   z-index:2000; text-align:center;
+  font-family: monospace;
 }
 #pauseScreen button {
   margin:10px; font-size:26px; padding:15px 40px; border:none;
@@ -115,6 +102,7 @@ html, body {
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   border:none; border-radius:12px; color:#fff; cursor:pointer;
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1500;
+  display:none;
 }
 
 /* --- End Screen --- */
@@ -123,6 +111,7 @@ html, body {
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
   justify-content:center; align-items:center; color:#fff; font-size:40px;
   z-index:1500; text-align:center;
+  font-family: monospace;
 }
 #endScreen button {
   margin-top:20px; font-size:26px; padding:15px 40px; border:none;
@@ -154,13 +143,6 @@ html, body {
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Common:</span> +1 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Rare 0.25%:</span> Double score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Rare 1%:</span> +144 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawns 3 bubbles</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble pulls all bubbles</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Rare 1.5%:</span> Inverts screen colors +10 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant win (+999999999 score)</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -247,126 +229,8 @@ document.addEventListener('click', e=>{
     closeIndex();
   }
 });
-function openIndex(){
-  indexPanel.style.top='20%';
-  homeScreen.style.display='none';
-}
-function closeIndex(){
-  indexPanel.style.top='100%';
-  if(!gameRunning) homeScreen.style.display='flex';
-}
-
-// --- COUNTDOWN & START GAME ---
-function startCountdown(){
-  countdownEl.style.display='block';
-  let count=3; countdownEl.textContent=count;
-  const interval=setInterval(()=>{
-    count--;
-    if(count>0) countdownEl.textContent=count;
-    else{
-      clearInterval(interval);
-      countdownEl.style.display='none';
-      scoreContainer.style.display='block';
-      pauseButton.style.display='block';
-      startGame();
-    }
-  },1000);
-}
-
-// --- GAME LOGIC ---
-function startGame(){
-  score=0; lives=3; bubbles=[]; gameRunning=true; pause=false;
-  scoreEl.textContent="Score: "+score; livesEl.textContent="Lives: "+lives;
-  startTime=Date.now();
-  spawnBubble();
-  requestAnimationFrame(updateBubbles);
-}
-
-function spawnBubble(){
-  if(!gameRunning || pause) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier = difficulty==="easy"?0.7:difficulty==="normal"?1:1.5;
-  const chance=Math.random();
-  const bubble=document.createElement('div');
-  bubble.classList.add('bubble');
-  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
-  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
-  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else { bubble.textContent="12"; bubble.dataset.type="normal"; }
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px'; bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-
-  bubble.addEventListener('click', ()=>{
-    if(!gameRunning) return;
-    popSound.currentTime=0; if(bubble.dataset.type!=='normal') popSound.play();
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnBubble();
-    else if(bubble.dataset.type==="gravity"){
-      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
-      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
-      bubbles.forEach(b=>{ b.style.left=(bx-parseFloat(b.style.width)/2)+'px'; b.style.top=(by-parseFloat(b.style.height)/2)+'px'; });
-    }
-    else if(bubble.dataset.type==="invert"){ document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000); }
-    else if(bubble.dataset.type==="instawin"){ score+=999999999; }
-    else score++;
-    if(score>999999999) score=999999999;
-    scoreEl.textContent="Score: "+score;
-    if(score>highscore){ highscore=score; highscoreEl.textContent="High Score: "+highscore; homeHighscore.textContent="High Score: "+highscore; }
-  });
-
-  bubbles.push(bubble);
-  setTimeout(spawnBubble,500);
-}
-
-function updateBubbles(){
-  if(!gameRunning) return;
-  if(!pause){
-    bubbles.forEach(bubble=>{
-      const top=parseFloat(bubble.style.top);
-      bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-      if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame(); }
-    });
-  }
-  requestAnimationFrame(updateBubbles);
-}
-
-function endGame(){
-  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none';
-  pauseButton.style.display='none';
-  finalScoreText.textContent=score;
-  endScreen.style.display='flex';
-}
-
-// --- PAUSE ---
-pauseButton.addEventListener('click', ()=>togglePause());
-btnContinue.addEventListener('click', ()=>{ pause=false; pauseScreen.style.display='none'; });
-btnEndGame.addEventListener('click', ()=>{ pause=false; pauseScreen.style.display='none'; endGame(); });
-
-function togglePause(){
-  if(!gameRunning) return;
-  pause=!pause;
-  if(pause){
-    pauseScreen.style.display='flex';
-    currentScorePause.textContent = "Score: "+score;
-  } else pauseScreen.style.display='none';
-}
-
-// Restart from end
-btnRestart.addEventListener('click', ()=>{
-  endScreen.style.display='none';
-  homeScreen.style.display='flex';
-});
+function openIndex(){ indexPanel.style.top='20%'; homeScreen.style.display='none'; }
+function closeIndex(){ indexPanel.style.top='100%'; if(!gameRunning) homeScreen.style.display='flex'; }
 </script>
 </body>
 </html>
